Some CSS tweaks

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <h1>Matching Game</h1>
         </header>
 
-        <section class="score-panel">
+        <div class="score-panel">
         	<ul class="stars">
                 <!-- stars are dynamically created and displayed here -->
         	</ul>
@@ -25,9 +25,9 @@
             <div class="restart">
         		<i class="fa fa-repeat"></i>
         	</div>
-        </section>
+        </div>
 
-        <section class="deck-panel">
+        <div class="deck-panel">
             <ul class="deck">
                 <!-- cards are dynamically created and displayed here -->
             </ul>
@@ -36,7 +36,7 @@
                 <p>You beat the game in <span class="moves">3</span> moves in a time of <span class="time">0</span> seconds!</p>
                 <div class="restart">Restart</div>
             </section>
-        </section>
+        </div>
 
     </div>
 
