--- a/index.html
+++ b/index.html
@@ -19,9 +19,15 @@
         <div class="score-panel">
         	<ul class="stars">
                 <!-- stars are dynamically created and displayed here -->
-        	</ul>
+            </ul>
+            
+            <div class="moves-text">
+                <span class="moves">3</span> Moves
+            </div>
 
-        	<span class="moves">3</span> Moves
+            <div class="time-text">
+                Time: <span class="time">0</span> s
+            </div>
 
             <div class="restart">
         		<i class="fa fa-repeat"></i>
