--- a/index.html
+++ b/index.html
@@ -40,7 +40,10 @@
             </ul>
             <section class="congrats-panel">
                 <h2>Congratulations!</h2>
-                <p>You beat the game in <span class="moves">3</span> moves in a time of <span class="time">0</span> seconds!</p>
+                <ul class="stars">
+                    <!-- stars are dynamically created and displayed here -->
+                </ul>
+                <p>You beat the game in <span class="moves">3</span> moves with a time of <span class="time">0</span> seconds!</p>
                 <div class="restart">Restart</div>
             </section>
         </div>
