Game records and displays best scores for fewest moves and fastest time

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             </ul>
             
             <div class="moves-text">
-                <span class="moves">3</span> Moves
+                <span class="moves">20</span> Moves
             </div>
 
             <div class="time-text">
@@ -43,7 +43,23 @@
                 <ul class="stars">
                     <!-- stars are dynamically created and displayed here -->
                 </ul>
-                <p>You beat the game in <span class="moves">3</span> moves with a time of <span class="time">0</span> seconds!</p>
+                <p>You beat the game in <span class="moves">20</span> moves with a time of <span class="time">0</span> seconds!</p>
+                <p>
+                    <span class="fewest-moves-new-message disabled">
+                        This is a new best score for completing the game with fewest moves!
+                    </span>
+                    <span class="fewest-moves-previous-message">
+                        The previous best score was <span class="previous-fewest-moves">3</span> moves.
+                    </span>
+                </p>
+                <p>
+                    <span class="fastest-time-new-message disabled">
+                        This is a new best score for completing the game in the fastest time!
+                    </span>
+                    <span class="fastest-time-previous-message">
+                        The previous fastest time was <span class="previous-fastest-time">3</span> seconds.
+                    </span>
+                </p>
                 <div class="restart">Restart</div>
             </section>
         </div>
