Final bugfixes and tweaks, comments, readme file

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>Matching Game</title>
     <meta name="description" content="">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet prefetch" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css">
     <link rel="stylesheet prefetch" href="https://fonts.googleapis.com/css?family=Coda">
     <link rel="stylesheet" href="css/app.css">
@@ -20,7 +20,7 @@
         	<ul class="stars">
                 <!-- stars are dynamically created and displayed here -->
             </ul>
-            
+
             <div class="moves-text">
                 <span class="moves">20</span> Moves
             </div>
@@ -60,7 +60,7 @@
                         The previous fastest time was <span class="previous-fastest-time">3</span> seconds.
                     </span>
                 </p>
-                <div class="restart">Restart</div>
+                <div class="restart">Restart <i class="fa fa-repeat"></i></div>
             </section>
         </div>
 
